cluster/istio/config/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: cluster-gateway
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "gatus.cluster.netbird.selfhosted"
        - "searxng.cluster.netbird.selfhosted"
        - "kiali.cluster.netbird.selfhosted"
