cluster/istio/config/gatus-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: example-virtualservice
spec:
  hosts:
    - "example.com"
  gateways:
    - cluster-gateway
  http:
    - route:
        - destination:
            host: gatus.gatus.svc.cluster.local
            port:
              number: 80
