cluster/istio/config/searxng-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: searxng-virtualservice
spec:
  hosts:
    - "searxng.cluster.netbird.selfhosted"
  gateways:
    - cluster-gateway
  http:
    - route:
        - destination:
            host: searxng.searxng.svc.cluster.local
            port:
              number: 8080
